--- a/src/scout_mini_ros/scout/scout_description/param/carlike/global_costmap_params.yaml
+++ b/src/scout_mini_ros/scout/scout_description/param/carlike/global_costmap_params.yaml
@@ -1,9 +1,9 @@
 global_costmap:
-  global_frame: map
+  global_frame: odom
   robot_base_frame: base_link #base_link
   update_frequency: 1.0
   publish_frequency: 0.5
-  static_map: true #false
+  static_map: false
   rolling_window: false #true
 
   transform_tolerance: 0.5
