--- a/src/scout_mini_ros/scout/scout_navigation/config/move_base/costmap_common.yaml
+++ b/src/scout_mini_ros/scout/scout_navigation/config/move_base/costmap_common.yaml
@@ -1,21 +1,24 @@
 footprint: [[-0.5, -0.33], [-0.5, 0.33], [0.5, 0.33], [0.5, -0.33]]
-footprint_padding: 0.02
+footprint_padding: 0.01
 
 robot_base_frame: base_link
-update_frequency: 5.0
-publish_frequency: 5.0
+update_frequency: 4.0
+publish_frequency: 3.0
 transform_tolerance: 0.5
 
 resolution: 0.05
 
-obstacle_range: 5.0
-raytrace_range: 5.0
-max_obstacle_height: 1.5
-min_obstacle_height: 0.1
+obstacle_range: 5.5
+raytrace_range: 6.0
 
-global_frame: odom
-rolling_window: true
-always_send_full_costmap: true
-static_map: false
-map_type: costmap
+#layer definitions
+static:
+    map_topic: /odom
+    subscribe_to_updates: true
 
+obstacles_laser:
+    observation_sources: laser
+    laser: {data_type: LaserScan, clearing: true, marking: true, topic: scan, inf_is_valid: true}
+
+inflation:
+    inflation_radius: 1.0
