--- a/src/scout_mini_ros/scout/scout_navigation/config/move_base/costmap_global.yaml
+++ b/src/scout_mini_ros/scout/scout_navigation/config/move_base/costmap_global.yaml
@@ -1,30 +1,7 @@
+global_frame: odom
+rolling_window: true
+track_unknown_space: true
+
 plugins:
-  # - {name: SLAM_global,          type: "costmap_2d::StaticLayer"}
-  - {name: obstacle_global,           type: "costmap_2d::ObstacleLayer"}
-  - {name: inflation_global,           type: "costmap_2d::InflationLayer"}
-
-# SLAM_global:
-  # map_topic: "/map"
-  # first_map_only: false
-  # lethal_cost_threshold: 50
-
-obstacle_global:
-  track_unknown_space: true # we want each cell to have 3 states; obstacle, free, or unknown
-  observation_sources: "lidar"
-  lidar:
-    topic: "/velodyne_points"
-    # topic: "/os_cloud_node/points"
-    # sensor_frame: "h2/velodyne"
-    data_type: "PointCloud2"
-    observation_persistence: 0.0
-    expected_update_rate: 2.0 # seconds timeout
-    marking: true
-    clearing: true
-    max_obstacle_height: 1.3
-    min_obstacle_height: 0.4
-    obstacle_range: 5
-    raytrace_range: 5
-
-inflation_global:
-  inflation_radius: .35
-  cost_scaling_factor: 1.0
+  - {name: obstacles_laser,           type: "costmap_2d::ObstacleLayer"}
+  - {name: inflation,                 type: "costmap_2d::InflationLayer"}
