--- a/src/scout_mini_ros/jackal/jackal_navigation/params/odom_nav_params/global_costmap_params.yaml
+++ b/src/scout_mini_ros/jackal/jackal_navigation/params/odom_nav_params/global_costmap_params.yaml
@@ -1,7 +1,7 @@
 global_costmap:
   global_frame: odom
   robot_base_frame: base_link
-  update_frequency: 20
+  update_frequency: 5
   publish_frequency: 5
   width: 40.0
   height: 40.0
@@ -9,5 +9,4 @@ global_costmap:
   origin_x: -20.0
   origin_y: -20.0
   static_map: true
-  rolling_window: false
-  
+  rolling_window: true
