--- a/src/scout_mini_ros/scout/scout_gazebo_sim/package.xml
+++ b/src/scout_mini_ros/scout/scout_gazebo_sim/package.xml
@@ -17,6 +17,7 @@
   <build_depend>roslaunch</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>ros_controllers</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>controller_manager</run_depend>
@@ -25,6 +26,7 @@
   <run_depend>gazebo_ros_control</run_depend>
   <run_depend>scout_description</run_depend>
   <run_depend>rostopic</run_depend>
+  <run_depend>ros_controllers</run_depend>
 
   <export>
   </export>
